# drf-sms-auth

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
drf-sms-auth/: manage.py
drf-sms-auth/config/: .env.example
drf-sms-auth/drf-sms-auth/: asgi.py  settings.py  urls.py  wsgi.py
drf-sms-auth/users/: managers.py  models.py  schemas.py  serializers.py  urls.py  utils.py  views.py
drf-sms-auth/users/migrations/: 0001_initial.py  0002_user_groups_user_is_staff_user_is_superuser_and_more.py  0003_alter_user_code_created_at_alter_user_phone.py
shering/: manage.py
shering/config/: .env.example
shering/shering/: asgi.py  settings.py  urls.py  wsgi.py
shering/users/: managers.py  models.py  schemas.py  serializers.py  tests.py  urls.py  utils.py  views.py
