[tool.poetry]
name = "drf-sms-auth"
version = "0.1.0"
description = "Pet project dedicated to Django Rest"
authors = ["BazaroZero <finatov05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"
djangorestframework-simplejwt = "^5.2.0"
python-dotenv = "^0.20.0"
drf-yasg = "^1.21.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
